fixed some typos and broken links on homepage and reformatted the html on the homepage

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,43 +1,32 @@
 <div id="carousel" carousel>
-
     <ul>
         <li>
             <div class="grid">
-            
                 <div class="row">           
                     <div class="col9 content">
-                    
                         <h1>Born to be</h1>
                         <h3>Edition 2013</h3>
                         <p>Ready for your rebirth @Devoxx?</p>
                         <a href="#/schedule" class="btn hidden">Schedule</a>
-                        
                     </div>
                     <div class="col11">
-                    
                         <img src="images_dummy/slide_01.png" class="visual" alt="Be born again">
                     
                     </div>
                 </div>
-                
             </div>                  
         </li>
         <li>
             <div class="grid">
-            
                 <div class="row">           
                     <div class="col9 content">
-                    
                         <h1>Call for Presentations</h1>
                         <h3>Speak @Devoxx</h3>
                         <p>We're looking for passionate developers from the community to present at Devoxx, check out the tracks and submit your talk(s)</p>
-                        <a href="#/" class="btn" scroll="tracks">Submit a talk</a>
-                        
+                        <a href="#/speaker/proposal/new" class="btn">Submit a talk</a>
                     </div>
                     <div class="col11">
-                    
                         <img src="images_dummy/slide_02.png" class="visual" alt="Be born again">
-                    
                     </div>
                 </div>
                 
@@ -52,7 +41,7 @@
                         <h1>Let's talk Java</h1>
                         <h3>Tracks 2013</h3>
                         <p>Java is at the roots of this conference, come learn about what's new in Java SE/EE, JSRs, JDK8, modularity and much more at Devoxx</p>
-                        <a href="#/" scroll="tracks" class="btn">All tracks</a>
+                        <a href="#/tracks" scroll="tracks" class="btn">All tracks</a>
                         
                     </div>
                     <div class="col11">
@@ -93,7 +82,7 @@
                     
                         <h1>What you didn't know about HTML5</h1>
                         <h3>Tracks 2013</h3>
-                        <p>Server-side web development is out, learn about the new breed of client side frameworks, the new features in HTML5, CSS3, JavaScript.next, the power of node.js and all it's libraries and tools that make web development productive and fun</p>
+                        <p>Server-side web development isn't hot anymore. Learn about the new breed of client side frameworks, the new features in HTML5, CSS3, JavaScript.next, the power of node.js and all it's libraries and tools that make web development productive and fun</p>
                         <a href="#/" class="btn" scroll="tracks">All tracks</a>
                         
                     </div>
@@ -231,169 +220,144 @@
             </li>            
         </ul>
     </div>
-
 </div>
         
-        <div id="tracks" class="area orange">
-            <div class="grid">
-            
-                <div class="row">           
-                    <div class="col20">
-
-                        <h2><a name="tracks"></a>Tracks <span>2013</span></h2>
-
-                        <ul class="dotList" id="trackList">
-                            <li>
-                                <div class="icon">
-                                    <img src="../images/tracks/icon_web.png" alt="Web and HTML5" />
-                                </div>
-                                <h4>Web &amp; HTML5</h4>
-                                <div class="popup">
-                                    <p>Web frameworks, HTML5, CSS3, the next JavaScript ES6, libraries and tools that help you build the next generation of web apps</p>
-                                    <span class="textballoon"></span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="icon">
-                                    <img src="../images/tracks/icon_cloud.png" alt="Cloud and Big Data" />
-                                </div>
-                                <h4>Cloud &amp; Big Data</h4>
-                                <div class="popup">
-                                    <p>Cloud computing, Platforms as a Service, Big Data and NoSQL</p>
-                                    <span class="textballoon"></span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="icon">
-                                    <img src="../images/tracks/icon_javaee.png" alt="JaveEE" />
-                                </div>
-                                <h4>JavaEE</h4>
-                                <div class="popup">
-                                    <p>Java Enterprise Edition, appservers, databases, MOM, batch processing and related JSRs</p>
-                                    <span class="textballoon"></span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="icon">
-                                    <img src="../images/tracks/icon_future.png" alt="Future at Devoxx" />
-                                </div>
-                                <h4>Future&lt;Devoxx&gt;</h4>
-                                <div class="popup">
-                                    <p>Developing for embedded devices, the internet of things, arduino, raspberry pi, quadcopters, robots and related</p>
-                                    <span class="textballoon"></span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="icon">
-                                    <img src="../images/tracks/icon_mobile.png" alt="Mobile" />
-                                </div>
-                                <h4>Mobile</h4>
-                                <div class="popup">
-                                    <p>Tools frameworks and libraries for building mobile apps, both as MobileWeb or native Android and iOS app</p>
-                                    <span class="textballoon"></span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="icon">
-                                    <img src="../images/tracks/icon_alternative.png" alt="Alternative Languages on the JVM" />
-                                </div>
-                                <h4>JVM Languages</h4>
-                                <div class="popup">
-                                    <p>Anything related to other languages than Java running on the JVM, the languages, tools, libraries and best practices</p>
-                                    <span class="textballoon"></span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="icon">
-                                    <img src="../images/tracks/icon_javase.png" alt="JavaSE" />
-                                </div>
-                                <h4>JavaSE</h4>
-                                <div class="popup">
-                                    <p>Java Standard Edition, anything non-related to JaveEE, like the language, JDK, performance tuning, modularity, etc...</p>
-                                    <span class="textballoon"></span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="icon">
-                                    <img src="../images/tracks/icon_methology.png" alt="Methodology" />
-                                </div>
-                                <h4>Methodology</h4>
-                                <div class="popup">
-                                    <p>Software development methodologies and related subjects</p>
-                                    <span class="textballoon"></span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="icon">
-                                    <img src="../images/tracks/icon_architecture.png" alt="Architecture and Security" />
-                                </div>
-                                <h4>Arch. &amp; Security</h4>
-                                <div class="popup">
-                                    <p>Software architecture, encryption and best practices to develop secure software</p>
-                                    <span class="textballoon"></span>
-                                </div>
-                            </li>
-
-                        </ul>
-
-
-                        <br><br>
-
-                        <h2>
-                             <a href="#/proposal" class="btn">Submit a talk</a>
-                        </h2>
-                            
-
-                    </div>          
-
-                </div>
-                
-
-            </div>
-        </div>
-        
-        
-        
-        <div id="tweetwall" class="area lightgrey" ng-controller="TwitterCtrl">
-            <div class="grid">
-            
-                <div class="row">           
-                    <div class="col10">
-                        
-                        <h2>What’s up? <span>#DEVOXX</span></h2>
-                        
-                    </div>  
-                    <div class="col10 apps">
-                        
-                        <h4>Schedule and interact!</h4>
-                        <a href="#" class="btn googleStore"></a>
-                        <a href="#" class="btn appStore"></a>
-                    
-                    </div>              
-                </div>
-                
-                <div class="row">           
-                    <div class="col20">
-                        
-                        <div class="carousel">
-                            <ul>
-                                <li tweetwall ng-repeat="tweet in tweets" class="{{tweet.class}}">
-                                    <div class="visual" ng-style="{backgroundImage: tweet.image}" ></div>
-                                    <div class="tweet" ng-click="openStatus(tweet)">
-                                        <p>{{tweet.tweet}}</p>
-                                        <div class="info">
-                                            <a href="http://twitter.com/{{tweet.author}}">@{{tweet.author}}</a> , {{tweet.time}} via <span ng-bind-html-unsafe="tweet.source"></span>
-                                        </div>
-                                        <span class="ballon"></span>
-                                    </div>
-                                </li>
-                               
-                            </ul>
+<div id="tracks" class="area orange">
+    <div class="grid">
+        <div class="row">
+            <div class="col20">
+                <h2><a name="tracks"></a>Tracks <span>2013</span></h2>
+                <ul class="dotList" id="trackList">
+                    <li>
+                        <div class="icon">
+                            <img src="../images/tracks/icon_web.png" alt="Web and HTML5" />
                         </div>
-                        
-                    </div>                  
-                </div>
-                
+                        <h4>Web &amp; HTML5</h4>
+                        <div class="popup">
+                            <p>Web frameworks, HTML5, CSS3, the next JavaScript ES6, libraries and tools that help you build the next generation of web apps</p>
+                            <span class="textballoon"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <img src="../images/tracks/icon_cloud.png" alt="Cloud and Big Data" />
+                        </div>
+                        <h4>Cloud &amp; Big Data</h4>
+                        <div class="popup">
+                            <p>Cloud computing, Platforms as a Service, Big Data and NoSQL</p>
+                            <span class="textballoon"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <img src="../images/tracks/icon_javaee.png" alt="JaveEE" />
+                        </div>
+                        <h4>JavaEE</h4>
+                        <div class="popup">
+                            <p>Java Enterprise Edition, appservers, databases, MOM, batch processing and related JSRs</p>
+                            <span class="textballoon"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <img src="../images/tracks/icon_future.png" alt="Future at Devoxx" />
+                        </div>
+                        <h4>Future&lt;Devoxx&gt;</h4>
+                        <div class="popup">
+                            <p>Developing for embedded devices, the internet of things, arduino, raspberry pi, quadcopters, robots and related</p>
+                            <span class="textballoon"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <img src="../images/tracks/icon_mobile.png" alt="Mobile" />
+                        </div>
+                        <h4>Mobile</h4>
+                        <div class="popup">
+                            <p>Tools frameworks and libraries for building mobile apps, both as MobileWeb or native Android and iOS app</p>
+                            <span class="textballoon"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <img src="../images/tracks/icon_alternative.png" alt="Alternative Languages on the JVM" />
+                        </div>
+                        <h4>JVM Languages</h4>
+                        <div class="popup">
+                            <p>Anything related to other languages than Java running on the JVM, the languages, tools, libraries and best practices</p>
+                            <span class="textballoon"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <img src="../images/tracks/icon_javase.png" alt="JavaSE" />
+                        </div>
+                        <h4>JavaSE</h4>
+                        <div class="popup">
+                            <p>Java Standard Edition, anything non-related to JaveEE, like the language, JDK, performance tuning, modularity, etc...</p>
+                            <span class="textballoon"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <img src="../images/tracks/icon_methology.png" alt="Methodology" />
+                        </div>
+                        <h4>Methodology</h4>
+                        <div class="popup">
+                            <p>Software development methodologies and related subjects</p>
+                            <span class="textballoon"></span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon">
+                            <img src="../images/tracks/icon_architecture.png" alt="Architecture and Security" />
+                        </div>
+                        <h4>Arch. &amp; Security</h4>
+                        <div class="popup">
+                            <p>Software architecture, encryption and best practices to develop secure software</p>
+                            <span class="textballoon"></span>
+                        </div>
+                    </li>
+                </ul>
+                <br><br>
+                <h2>
+                     <a href="#/speaker/proposal/new" class="btn">Submit a talk</a>
+                </h2>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="tweetwall" class="area lightgrey" ng-controller="TwitterCtrl">
+    <div class="grid">
+        <div class="row">
+            <div class="col10">
+                <h2>What’s up? <span>#DEVOXX</span></h2>
+            </div>
+            <div class="col10 apps">
+                <h4>Schedule and interact!</h4>
+                <a href="#" class="btn googleStore"></a>
+                <a href="#" class="btn appStore"></a>
             </div>
         </div>
 
+        <div class="row">
+            <div class="col20">
+                <div class="carousel">
+                    <ul>
+                        <li tweetwall ng-repeat="tweet in tweets" class="{{tweet.class}}">
+                            <div class="visual" ng-style="{backgroundImage: tweet.image}" ></div>
+                            <div class="tweet" ng-click="openStatus(tweet)">
+                                <p>{{tweet.tweet}}</p>
+                                <div class="info">
+                                    <a href="http://twitter.com/{{tweet.author}}">@{{tweet.author}}</a> , {{tweet.time}} via <span ng-bind-html-unsafe="tweet.source"></span>
+                                </div>
+                                <span class="ballon"></span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
