improved profile page and fixed login (invalid user token) error

--- a/app/views/speaker/profile.html
+++ b/app/views/speaker/profile.html
@@ -13,7 +13,7 @@
     <div>
         <form>
             <div class="grid">
-                <div class="row" ng-hide="profileComplete()">
+                <div class="row" ng-hide="profileComplete">
                     <div class="col12">
                         <p class="label label-danger">
                             <h4>Your profile is not yet complete.</h4>
