Added Roy and Alexis

--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -365,6 +365,23 @@
                         </div>
                     </div>
                 </li>
+                <li class="Program">
+                    <div class="icon" style="background: url('../../images/team/AlexisPouchkine.jpg') no-repeat center;"></div>
+                    <h4>Alexis Moussine-Pouchkine</h4>
+
+                    <div class="popup">
+                        <h4>Alexis Moussine-Pouchkine</h4>
+
+                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+
+                        <div class="links clearfix">
+                            <a href="#" class="btn_facebook">Facebook</a>
+                            <a href="#" class="btn_linkedin">LinkedIn</a>
+                            <a href="#" class="btn_twitter">Twitter</a>
+                            <a href="#" class="btn_mail">Mail me</a>
+                        </div>
+                    </div>
+                </li>
                 <li class="Program Devices">
                     <div class="icon" style="background: url('../../images/team/HansCapelle.jpg') no-repeat center;"></div>
                     <h4>Hans Capelle</h4>
@@ -405,6 +422,23 @@
 
                     <div class="popup">
                         <h4>Cyril Lakech</h4>
+
+                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+
+                        <div class="links clearfix">
+                            <a href="#" class="btn_facebook">Facebook</a>
+                            <a href="#" class="btn_linkedin">LinkedIn</a>
+                            <a href="#" class="btn_twitter">Twitter</a>
+                            <a href="#" class="btn_mail">Mail me</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="media">
+                    <div class="icon" style="background: url('../../images/team/RoyVanRijn.jpg') no-repeat center;"></div>
+                    <h4>Roy Van Rijn</h4>
+
+                    <div class="popup">
+                        <h4>Roy Van Rijn</h4>
 
                         <p>Vivamus sagittis lacus vel augue laoreet</p>
 
