--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -87,8 +87,8 @@
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
-                            <a href="#" class="btn_twitter">Twitter</a>
+                            <a href="http://nl.linkedin.com/in/jankeesvanandel" class="btn_linkedin">LinkedIn</a>
+                            <a href="https://twitter.com/jankeesvanandel" class="btn_twitter">Twitter</a>
                             <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
@@ -104,8 +104,8 @@
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
-                            <a href="#" class="btn_twitter">Twitter</a>
+                            <a href="http://be.linkedin.com/in/gertleenders" class="btn_linkedin">LinkedIn</a>
+                            <a href="https://twitter.com/glnds" class="btn_twitter">Twitter</a>
                             <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
@@ -121,7 +121,7 @@
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
+                            <a href="http://be.linkedin.com/in/stephanjanssen" class="btn_linkedin">LinkedIn</a>
                             <a href="http://twitter.com/stephan007" class="btn_twitter">Twitter</a>
                             <a href="mailto:sja@devoxx.com" class="btn_mail">Mail me</a>
                         </div>
@@ -138,7 +138,7 @@
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
+                            <a href="http://be.linkedin.com/in/timpeeters" class="btn_linkedin">LinkedIn</a>
                             <a href="#" class="btn_twitter">Twitter</a>
                             <a href="#" class="btn_mail">Mail me</a>
                         </div>
@@ -155,8 +155,8 @@
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
-                            <a href="#" class="btn_twitter">Twitter</a>
+                            <a href="http://be.linkedin.com/in/ljacomet" class="btn_linkedin">LinkedIn</a>
+                            <a href="https://twitter.com/ljacomet" class="btn_twitter">Twitter</a>
                             <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
@@ -172,8 +172,8 @@
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
-                            <a href="#" class="btn_twitter">Twitter</a>
+                            <a href="http://be.linkedin.com/pub/kristien-leyn/12/556/b4" class="btn_linkedin">LinkedIn</a>
+                            <a href="https://twitter.com/Krisje10" class="btn_twitter">Twitter</a>
                             <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
@@ -189,8 +189,8 @@
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
-                            <a href="#" class="btn_twitter">Twitter</a>
+                            <a href="http://be.linkedin.com/in/johanvos" class="btn_linkedin">LinkedIn</a>
+                            <a href="https://twitter.com/johanvos‎" class="btn_twitter">Twitter</a>
                             <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
@@ -206,8 +206,8 @@
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
-                            <a href="#" class="btn_twitter">Twitter</a>
+                            <a href="http://be.linkedin.com/in/alexvanboxel‎" class="btn_linkedin">LinkedIn</a>
+                            <a href="https://twitter.com/alexvb‎" class="btn_twitter">Twitter</a>
                             <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
@@ -223,7 +223,7 @@
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
+                            <a href="http://be.linkedin.com/pub/sam-buls/19/118/a45" class="btn_linkedin">LinkedIn</a>
                             <a href="#" class="btn_twitter">Twitter</a>
                             <a href="#" class="btn_mail">Mail me</a>
                         </div>
@@ -241,7 +241,7 @@
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
                             <a href="#" class="btn_linkedin">LinkedIn</a>
-                            <a href="#" class="btn_twitter">Twitter</a>
+                            <a href="https://twitter.com/stieno" class="btn_twitter">Twitter</a>
                             <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
@@ -257,8 +257,8 @@
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
-                            <a href="#" class="btn_twitter">Twitter</a>
+                            <a href="http://be.linkedin.com/pub/luc-duponcheel/1/366/6b7‎" class="btn_linkedin">LinkedIn</a>
+                            <a href="https://twitter.com/LucDup‎" class="btn_twitter">Twitter</a>
                             <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
@@ -274,8 +274,8 @@
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
-                            <a href="#" class="btn_twitter">Twitter</a>
+                            <a href="http://be.linkedin.com/in/danieldeluca" class="btn_linkedin">LinkedIn</a>
+                            <a href="https://twitter.com/danieldeluca‎" class="btn_twitter">Twitter</a>
                             <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
@@ -291,8 +291,8 @@
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
-                            <a href="#" class="btn_twitter">Twitter</a>
+                            <a href="http://be.linkedin.com/pub/david-delabassee/13/48b/999" class="btn_linkedin">LinkedIn</a>
+                            <a href="https://twitter.com/delabassee" class="btn_twitter">Twitter</a>
                             <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
@@ -308,8 +308,8 @@
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
-                            <a href="#" class="btn_twitter">Twitter</a>
+                            <a href="http://uk.linkedin.com/in/dhardiker‎" class="btn_linkedin">LinkedIn</a>
+                            <a href="https://twitter.com/dhardiker‎" class="btn_twitter">Twitter</a>
                             <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
@@ -325,8 +325,8 @@
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
-                            <a href="#" class="btn_twitter">Twitter</a>
+                            <a href="http://be.linkedin.com/in/tcabe" class="btn_linkedin">LinkedIn</a>
+                            <a href="https://twitter.com/Imifos" class="btn_twitter">Twitter</a>
                             <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
@@ -342,8 +342,8 @@
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
-                            <a href="#" class="btn_twitter">Twitter</a>
+                            <a href="http://www.linkedin.com/in/steveonjava‎" class="btn_linkedin">LinkedIn</a>
+                            <a href="https://twitter.com/steveonjava" class="btn_twitter">Twitter</a>
                             <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
@@ -359,8 +359,8 @@
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
-                            <a href="#" class="btn_twitter">Twitter</a>
+                            <a href="http://be.linkedin.com/in/peterkuterna" class="btn_linkedin">LinkedIn</a>
+                            <a href="https://twitter.com/peterkuterna" class="btn_twitter">Twitter</a>
                             <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
@@ -376,8 +376,8 @@
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
-                            <a href="#" class="btn_twitter">Twitter</a>
+                            <a href="http://fr.linkedin.com/pub/alexis-moussine-pouchkine/8/51a/4b2" class="btn_linkedin">LinkedIn</a>
+                            <a href="https://twitter.com/alexismp" class="btn_twitter">Twitter</a>
                             <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
@@ -410,8 +410,8 @@
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
-                            <a href="#" class="btn_twitter">Twitter</a>
+                            <a href="http://www.linkedin.com/pub/dir/Mike/Seghers" class="btn_linkedin">LinkedIn</a>
+                            <a href="https://twitter.com/mikeseghers‎" class="btn_twitter">Twitter</a>
                             <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
@@ -427,8 +427,8 @@
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
-                            <a href="#" class="btn_twitter">Twitter</a>
+                            <a href="http://fr.linkedin.com/in/cyrillakech" class="btn_linkedin">LinkedIn</a>
+                            <a href="https://twitter.com/cyril_lakech‎" class="btn_twitter">Twitter</a>
                             <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
@@ -444,8 +444,42 @@
 
                         <div class="links clearfix">
                             <a href="#" class="btn_facebook">Facebook</a>
-                            <a href="#" class="btn_linkedin">LinkedIn</a>
-                            <a href="#" class="btn_twitter">Twitter</a>
+                            <a href="http://nl.linkedin.com/in/royvanrijn" class="btn_linkedin">LinkedIn</a>
+                            <a href="https://twitter.com/royvanrijn‎" class="btn_twitter">Twitter</a>
+                            <a href="#" class="btn_mail">Mail me</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="program">
+                    <div class="icon" style="background: url('../../images/team/RoyVanRijn.jpg') no-repeat center;"></div>
+                    <h4>Steven Noels</h4>
+
+                    <div class="popup">
+                        <h4>Steven Noels</h4>
+
+                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+
+                        <div class="links clearfix">
+                            <a href="#" class="btn_facebook">Facebook</a>
+                            <a href="http://be.linkedin.com/in/stevenn‎" class="btn_linkedin">LinkedIn</a>
+                            <a href="https://twitter.com/stevenn‎" class="btn_twitter">Twitter</a>
+                            <a href="#" class="btn_mail">Mail me</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="program">
+                    <div class="icon" style="background: url('../../images/team/RoyVanRijn.jpg') no-repeat center;"></div>
+                    <h4>Geert Van Landeghem</h4>
+
+                    <div class="popup">
+                        <h4>Geert Van Landeghem</h4>
+
+                        <p>Vivamus sagittis lacus vel augue laoreet</p>
+
+                        <div class="links clearfix">
+                            <a href="#" class="btn_facebook">Facebook</a>
+                            <a href="http://be.linkedin.com/in/geertvanlandeghem‎" class="btn_linkedin">LinkedIn</a>
+                            <a href="https://twitter.com/gvanlandeghem" class="btn_twitter">Twitter</a>
                             <a href="#" class="btn_mail">Mail me</a>
                         </div>
                     </div>
