Contact page implemented, REST service TODO

--- a/app/views/practical/contact.html
+++ b/app/views/practical/contact.html
@@ -1,3 +1,5 @@
+<div class="contact">
+
 <div id="topinfo" class="area orange">
     <div class="grid">
 
@@ -9,7 +11,7 @@
                     B-8020 Oostkamp<br>
                     Belgium<br>
                     BE 0477 182 887<br>
-                    <a href="#">info@devoxx.com</a>
+                    <a href="mailto:info@devoxx.com">info@devoxx.com</a>
                 </p>
 
             </div>
@@ -24,34 +26,45 @@
         <form>
 
             <div class="row">
-                <div class="col12">
+                <div class="col12" ng-controller="ContactCtrl">
 
-                    <ul>
+                    <ul ng-hide="feedback.type == 'info'">
                         <li>
                             <label>Name</label>
-                            <input type="text" class="text" name="name" value="" />
+                            <input type="text" class="text" name="name" value="" devoxx-uniform ng-model='model.name' />
+                        </li>
+                        <li>
+                            <label>Email</label>
+                            <input type="email" class="text" name="name" value="" devoxx-uniform ng-model='model.email' />
                         </li>
                         <li>
                             <label>Company</label>
-                            <input type="text" class="text" name="company" value="" />
+                            <input type="text" class="text" name="company" value="" devoxx-uniform ng-model='model.company' />
                         </li>
                         <li>
                             <label>Category</label>
                             <ul class="checkradios clearfix">
-                                <li><label><input type='checkbox' value='sponsoring' /> Sponsoring</label></li>
-                                <li><label><input type='checkbox' value='exhibition' /> Exhibition</label></li>
-                                <li><label><input type='checkbox' value='presentations' /> Presentations</label></li>
-                                <li><label><input type='checkbox' value='practical' /> Practical</label></li>
+                                <li><label><input type='checkbox' value='sponsoring' devoxx-uniform ng-model='model.category.sponsoring' /> Sponsoring</label></li>
+                                <li><label><input type='checkbox' value='exhibition' devoxx-uniform ng-model='model.category.exhibition' /> Exhibition</label></li>
+                                <li><label><input type='checkbox' value='presentations' devoxx-uniform ng-model='model.category.presentations' /> Presentations</label></li>
+                                <li><label><input type='checkbox' value='practical' devoxx-uniform ng-model='model.category.practical' /> Practical</label></li>
                             </ul>
                         </li>
                         <li>
                             <label>Question</label>
-                            <textarea cols="80" rows="10" name="question"></textarea>
+                            <textarea rows="5" name="question" devoxx-uniform ng-model="model.question"></textarea>
                         </li>
                         <li class="btn">
-                            <input type="submit" name="submit" value="Send" />
+                            <input type="submit" name="submit" value="Send" ng-click="send()" />
                         </li>
+
+
                     </ul>
+
+
+                    <div ng-show="feedback" class="alert alert-{{feedback.type}}">
+                        {{feedback.message}}
+                    </div>
 
                 </div>
 
@@ -59,7 +72,7 @@
 
                     <div class="banner">
                         <h4>IMPORTANT NOTE</h4>
-                        <p>Make sure you first view the <a href="#faq">FAQ page</a> before contacting us.</p>
+                        <p>Make sure you first view the <a href="#faq">FAQ page</a> before contacting us.</p>                    
                     </div>
 
                 </div>
