--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,3 +1,6 @@
+
+<div class="contact">
+
 <div id="topinfo" class="area orange">
     <div class="grid">
 
@@ -58,3 +61,4 @@
     </div>
 </div>
 
+</div>
