Added and fixed FAQ

--- a/app/views/practical/faq.html
+++ b/app/views/practical/faq.html
@@ -1,3 +1,6 @@
+ 
+<div class="faq">
+
 <div id="topinfo" class="area orange">
     <div class="grid">
 
@@ -5,16 +8,13 @@
             <div class="col11">
 
                 <h1>FAQ</h1>
-                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.
-                    laoreet rutrum faucibus dolor auctor </p>
+                <p></p>
 
             </div>
         </div>
 
     </div>
 </div>
-
-
 
 <div id="paper_form" class="area lightgrey">
     <div class="grid">
@@ -24,26 +24,31 @@
 
                 <h1>Frequently asked questions</h1>
 
-                <div id="accordion">
+                <div id="accordion" accordeon>
 
-                    <h4 class="acco_title">Title faq 1</h4>
+                    <h4 class="acco_title">Registration</h4>
                     <div class="acco_content" style="display: block;">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam venenatis ligula fringilla lorem interdum tempor. Nam nec dolor et erat congue vehicula. Proin quis tortor vitae odio laoreet volutpat. Cras id elementum risus. Donec a erat lacus. Cras ac felis ante, vel rhoncus nulla. Cras luctus sollicitudin justo non rhoncus. Mauris in turpis nisl. Cras ipsum tortor, cursus sed scelerisque sit amet, luctus quis nisi. </p>
+                        <p>Devoxx 2013 will open soon</p>
                     </div>
 
-                    <h4 class="acco_title">Title faq 2</h4>
+                    <h4 class="acco_title"> Prices</h4>
                     <div class="acco_content">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam venenatis ligula fringilla lorem interdum tempor. Nam nec dolor et erat congue vehicula. Proin quis tortor vitae odio laoreet volutpat. Cras id elementum risus. Donec a erat lacus. Cras ac felis ante, vel rhoncus nulla. Cras luctus sollicitudin justo non rhoncus. Mauris in turpis nisl. Cras ipsum tortor, cursus sed scelerisque sit amet, luctus quis nisi. </p>
+                        <p>
+                            Devoxx University is 350 Euro (2 days)<br>
+                            Devoxx Conference is 450 Euro (3 days)<br>
+                            Devoxx Combi ticket is 700 Euro (5 days)<br>
+                            All prices are excluding 21% VAT<br>
+                            Every attendee receives full access to the Devoxx 2013 channel on Parleys.com!</p>
+                        </div>
+
+                    <h4 class="acco_title">Twitter</h4>
+                    <div class="acco_content">
+                        <p>Follow us on <a href="http://twitter.com/devoxx">Twitter</a> for real-time info.</p>
                     </div>
 
-                    <h4 class="acco_title">Title faq 3</h4>
+                    <h4 class="acco_title">Java User Groups</h4>
                     <div class="acco_content">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam venenatis ligula fringilla lorem interdum tempor. Nam nec dolor et erat congue vehicula. Proin quis tortor vitae odio laoreet volutpat. Cras id elementum risus. Donec a erat lacus. Cras ac felis ante, vel rhoncus nulla. Cras luctus sollicitudin justo non rhoncus. Mauris in turpis nisl. Cras ipsum tortor, cursus sed scelerisque sit amet, luctus quis nisi. </p>
-                    </div>
-
-                    <h4 class="acco_title">Title faq 4</h4>
-                    <div class="acco_content">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam venenatis ligula fringilla lorem interdum tempor. Nam nec dolor et erat congue vehicula. Proin quis tortor vitae odio laoreet volutpat. Cras id elementum risus. Donec a erat lacus. Cras ac felis ante, vel rhoncus nulla. Cras luctus sollicitudin justo non rhoncus. Mauris in turpis nisl. Cras ipsum tortor, cursus sed scelerisque sit amet, luctus quis nisi. </p>
+                        <p>We have again a JUG affiliation program which is available until end of September. For new JUGs, make sure you add one of our banners on your JUG website and <a href="#/contact">Contact us</a>.</p>
                     </div>
                 </div>
 
@@ -52,13 +57,15 @@
             <div class="col6 push2 ">
 
                 <div class="banner">
-                    <h4>IMPORTANT NOTE</h4>
-                    <p>Please submit a question on our <a href="#contact">Contact Us</a> page if this page couldn't help you!</p>
+                    <h4>Other question?</h4>
+                    <p>Please submit a question on our <a href="#/contact">Contact us</a> page if this page couldn't help you!</p>
                 </div>
 
             </div>
         </div>
 
     </div>
+</div>
+
 </div>
 
